--- a/index.html
+++ b/index.html
@@ -18,35 +18,28 @@
       font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     }
 
-    /* Top blue banner */
-    .banner{height:50px; width:100%; background:var(--brand-blue)}
-
-    .wrap{max-width:720px; margin:0 auto 40px; padding:0 16px}
+    .wrap{max-width:720px; margin:40px auto; padding:0 16px}
     .card{
       background:var(--card-bg);
-      border-radius:0 0 24px 24px;           /* square top corners */
+      border-radius:24px; /* round all corners */
       box-shadow:0 8px 24px rgba(0,0,0,.08);
       padding:28px 24px;
-      margin-top:0;
     }
 
-    /* Header sizes to match form pages */
+    /* Header sizes */
     h1{
       margin:0 0 6px 0;
       font-weight:900;
-      letter-spacing:.2px;
-      font-size:32px;                        /* exact size */
-      line-height:1.1;
-      white-space:nowrap;
+      font-size:clamp(26px, 5vw, 32px);
+      line-height:1.2;
+      word-break:break-word; /* ensures no overflow */
     }
     .subhead{
       margin:0 0 22px 0;
       font-weight:800;
-      letter-spacing:.3px;
       text-transform:uppercase;
-      font-size:20px;                        /* exact size */
+      font-size:20px;
       color:#4d4d4d;
-      white-space:nowrap;
     }
 
     /* Buttons */
@@ -60,44 +53,32 @@
     .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
 
-    /* Layout: icon and text closer together */
     .btn-grid{
       display:grid; grid-template-columns:auto 1fr; gap:10px; align-items:center;
     }
-    .title{font-weight:800; font-size:18px; line-height:1.2}
-    .subtitle{font-size:14px; color:var(--muted); margin-top:3px; line-height:1.2}
-    /* subtitle is in same block as title, so it's naturally left-aligned with it */
+    .title{font-weight:800; font-size:18px; line-height:1.2; text-align:left}
+    .subtitle{font-size:14px; color:var(--muted); margin-top:3px; line-height:1.2; text-align:left}
 
-    /* Prominent icons: blue rounded square with white figures */
+    /* Prominent icons */
     .icon{
       width:56px; height:56px; flex:none; border-radius:12px; background:var(--brand-blue);
       display:inline-block;
     }
     .icon svg{width:100%; height:100%}
-
-    @media (min-width:640px){
-      .btn{padding:20px 22px}
-      .icon{width:60px; height:60px}
-      .title{font-size:19px}
-    }
   </style>
 </head>
 <body>
-  <div class="banner" aria-hidden="true"></div>
-
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
       <div class="subhead">Self Assessment Form</div>
 
-      <!-- Button 1: Team (single person icon) -->
+      <!-- Button 1: Team (single person) -->
       <button class="btn" onclick="location.href='./team/';"
         aria-label="I am a team member. I want to assess myself.">
         <div class="btn-grid">
           <span class="icon" aria-hidden="true">
-            <!-- one person icon -->
             <svg viewBox="0 0 48 48" fill="none">
-              <rect x="2" y="2" width="44" height="44" rx="10" fill="var(--brand-blue)" />
               <circle cx="24" cy="16" r="9" fill="#ffffff"/>
               <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff" opacity=".9"/>
             </svg>
@@ -109,21 +90,18 @@
         </div>
       </button>
 
-      <!-- Button 2: Peer (clear two-person icon) -->
+      <!-- Button 2: Peer (two persons simplified) -->
       <button class="btn" onclick="location.href='./peer/';"
         aria-label="I am a peer reviewer. I want to review my friend.">
         <div class="btn-grid">
           <span class="icon" aria-hidden="true">
-            <!-- two persons icon (clearly two heads/shoulders) -->
             <svg viewBox="0 0 48 48" fill="none">
-              <rect x="2" y="2" width="44" height="44" rx="10" fill="var(--brand-blue)" />
-              <!-- Left person -->
-              <circle cx="18" cy="17" r="7" fill="#ffffff"/>
-              <path d="M8 36c0-6 6-10 10-10" stroke="#ffffff" stroke-width="2" stroke-linecap="round" opacity=".95"/>
-              <path d="M8 36c0-6.5 6-11 12-11s12 4.5 12 11" fill="#ffffff" opacity=".28"/>
-              <!-- Right person (slightly behind) -->
-              <circle cx="30.5" cy="18.5" r="6.5" fill="#ffffff" opacity="1"/>
-              <path d="M22 36c0-5.8 5.2-9.5 10.5-9.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round" opacity=".95"/>
+              <!-- left person -->
+              <circle cx="18" cy="18" r="7" fill="#ffffff"/>
+              <!-- right person -->
+              <circle cx="30" cy="18" r="7" fill="#ffffff" opacity="0.95"/>
+              <!-- base (shared shoulders) -->
+              <path d="M10 38c0-7 6-12 12-12s12 5 12 12" fill="#ffffff" opacity="0.9"/>
             </svg>
           </span>
           <div>
