--- a/team/index.html
+++ b/team/index.html
@@ -621,9 +621,9 @@
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">peer reviewer information</h2>
-                <p class="intro">after you assess yourself a peer will review you. Choose any peer who knows you well and has worked in BED for at least 12 months</p>
-                <div class="row"><label for="peerName">peer reviewer</label><input id="peerName" /></div>
+                <h2 class="section-title">who will review you/h2>
+                <p class="intro">after you assess yourself a friend will review you. This is called peer review. Choose anyine in your teeam who knows you well and worked in BED for at least 12 months</p>
+                <div class="row"><label for="peerName">peer name</label><input id="peerName" /></div>
                 <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" /></div>
                 <div class="row">
                     <label for="peerHotel">peer location</label>
@@ -645,13 +645,13 @@
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">INSTRUCTIONS</h2>
                 <p class="intro">
-                    Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know what you're good at and what you can do better
+                    Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know what you're good at and if there are things you can do better
                 </p>
                 <h2 class="section-title">RATING</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
                         <span class="badge" style="width: 28px; height: 28px; border-radius: 50%; background: var(--blue); color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700;">1</span>
-                        <span>I am not so good at this</span>
+                        <span>I am not good at this</span>
                     </li>
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
                         <span class="badge" style="width: 28px; height: 28px; border-radius: 50%; background: var(--blue); color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700;">2</span>
