--- a/team/index.html
+++ b/team/index.html
@@ -621,8 +621,8 @@
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">who will review you/h2>
-                <p class="intro">after you assess yourself a friend will review you. This is called peer review. Choose anyine in your teeam who knows you well and worked in BED for at least 12 months</p>
+                <h2 class="section-title">your reviewer</h2>
+                <p class="intro">After you assess yourself a friend will review you. You can ask anyone in your team who knows you well and worked in BED for at least 12 months</p>
                 <div class="row"><label for="peerName">peer name</label><input id="peerName" /></div>
                 <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" /></div>
                 <div class="row">
@@ -645,7 +645,7 @@
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">INSTRUCTIONS</h2>
                 <p class="intro">
-                    Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know what you're good at and if there are things you can do better
+                    Read each statement and think how you act in these situations. Then rating yourself from 1-5. Be honest with yourself. Looking in the mirror help you to understand what you're good at and what you can do better
                 </p>
                 <h2 class="section-title">RATING</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
@@ -748,7 +748,7 @@
         <div class="modal-backdrop" id="eligBackdrop" style="position: fixed; inset: 0; background: rgba(0, 0, 0, 0.35); display: none; align-items: center; justify-content: center; z-index: 50;">
             <div class="modal" style="width: min(92vw, 520px); background: #fff; border-radius: 18px; padding: 20px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);">
                 <h3 style="margin: 0 0 10px 0; font-size: 18px;">please confirm</h3>
-                <p style="margin: 0 0 18px 0; font-size: 16px; line-height: 1.5; color: #222;">my peer reviewer knows me well and worked in BED for at least 12 months</p>
+                <p style="margin: 0 0 18px 0; font-size: 16px; line-height: 1.5; color: #222;">my peer knows me well and has worked in BED for at least 12 months</p>
                 <div class="row-btns" style="display: flex; justify-content: flex-end; gap: 10px;">
                     <button class="btn-secondary" id="eligCancel">Cancel</button>
                     <button id="eligOk">OK</button>
